@@ -1,5 +1,6 @@
 0.07
  - Fix LICENSE file.
+ - Update Module::Install to 1.14 version.
 
 0.06 2014-08-01T10:21:00+02:00
  - Fix ERRORS section in doc.
